force-app/main/default/objects/SDG_Outcome__c/SDG_Outcome__c.object-meta.xml
<CustomObject>
    <description>Outcome related to a SDG</description>
    <label>SDG Outcome</label>
    <nameField>
        <displayFormat>SDG-O-{00000}</displayFormat>
        <label>SDG Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDG Outcome</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>