force-app/main/default/objects/SDG_Outcome__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date the outcome was completed</description>
    <inlineHelpText>The date which the outcome was delivered.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>