force-app/main/default/objects/SDG_Outcome__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the outcome</description>
    <inlineHelpText>Provide an overall description of what the outcome is measuring.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>