force-app/main/default/objects/SDG_Outcome__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <description>Target completion date for the outcome</description>
    <inlineHelpText>The expected delivery date for an outcome</inlineHelpText>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>