force-app/main/default/objects/SDG_Outcome__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <description>Parent SDG Goal</description>
    <inlineHelpText>Select the Sustainable Development Goal this outcome supports.</inlineHelpText>
    <label>Goal</label>
    <referenceTo>SDG_Goal__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>SDG_Outcome</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>