force-app/main/default/objects/SDG_Outcome__c/fields/Goal_Target__c.field-meta.xml
<CustomField>
    <fullName>Goal_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated SDG Goal Target</description>
    <inlineHelpText>Select the specific goal target this outcome addresses.</inlineHelpText>
    <label>Goal Target</label>
    <referenceTo>SDG_Goal_Target__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>SDG_Outcome</relationshipName>
    <type>Lookup</type>
</CustomField>