force-app/main/default/objects/SDG_Outcome__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current progress status of the outcome</description>
    <inlineHelpText>Set the current overall status for the Outcome. Note that some automation will also update this field.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind</fullName>
                <color>#FF0000</color>
                <label>Behind</label>
            </value>
            <value>
                <fullName>On Track</fullName>
                <color>#33FF33</color>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#33FF33</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Exceeded</fullName>
                <color>#33FF33</color>
                <label>Exceeded</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#FFFF66</color>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>