force-app/main/default/objects/SDG_Outcome__c/fields/Target_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Target_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated target indicator</description>
    <inlineHelpText>Select the target indicator this outcome measures against.</inlineHelpText>
    <label>Target Indicator</label>
    <referenceTo>SDG_Target_Indicator__c</referenceTo>
    <relationshipLabel>Outcomes</relationshipLabel>
    <relationshipName>SDG_Outcome</relationshipName>
    <type>Lookup</type>
</CustomField>