force-app/main/default/objects/SDG_Outcome__c/fields/Total_Active_Measures__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Measures__c</fullName>
    <description>Rollup count of active measures</description>
    <inlineHelpText>Total Number of linked Measures which are not Cancelled</inlineHelpText>
    <label>Total Active Measures</label>
    <summaryFilterItems>
        <field>SDG_Outcome_Measure__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>SDG_Outcome_Measure__c.SDG_Outcome__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>