force-app/main/default/objects/SDG_Outcome__c/fields/Total_Completed_Measures__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Measures__c</fullName>
    <description>Rollup count of completed measures</description>
    <inlineHelpText>Total related measures which are &apos;Completed&apos; or &apos;Exceeded&apos;</inlineHelpText>
    <label>Total Completed Measures</label>
    <summaryFilterItems>
        <field>SDG_Outcome_Measure__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed, Exceeded</value>
    </summaryFilterItems>
    <summaryForeignKey>SDG_Outcome_Measure__c.SDG_Outcome__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>