force-app/main/default/objects/SDG_Outcome__c/fields/Total_Measures_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Total_Measures_Exceeded__c</fullName>
    <description>Rollup count of exceeded measures</description>
    <inlineHelpText>Total Number of related Measures which were Exceeded</inlineHelpText>
    <label>Total Measures Exceeded</label>
    <summaryFilterItems>
        <field>SDG_Outcome_Measure__c.Status__c</field>
        <operation>equals</operation>
        <value>Exceeded</value>
    </summaryFilterItems>
    <summaryForeignKey>SDG_Outcome_Measure__c.SDG_Outcome__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>